@@ -1,204 +1,83 @@
-# XDM — Xtreme Download Manager
+**As of 2026 this project is in active development**
 
-A desktop download manager. Maven multi-module Kotlin/JVM project with a Swing UI
-(FlatLaf), driven by a companion browser extension that captures download/media requests
-and forwards them to the running app over a local HTTP server.
+<p id="downloads" align="center">
+	<img src="https://i.stack.imgur.com/TOfqL.png" height="120px"/>
+	<h1 align="center">Xtreme Download Manager</h1>
+</p>
 
-## Modules
+<p align="center">
+	<a href="https://github.com/subhra74/xdm/workflows/Java%20CI/badge.svg?branch=master"><img src="https://github.com/subhra74/xdm/workflows/Java%20CI/badge.svg?branch=master" alt="Java CI" /></a>
+	<a href="https://camo.githubusercontent.com/278e057571a0481121b2d60490ff656fb8736a20/68747470733a2f2f696d672e736869656c64732e696f2f6769746875622f646f776e6c6f6164732f73756268726137342f78646d2f746f74616c2e737667"><img src="https://img.shields.io/github/downloads/subhra74/xdm/total.svg" alt="Github All Releases" /></a>
+</p>
 
-- **xdm-core** — download engine (HTTP/HLS/DASH), HTTP client, manifest parsers, pure-Kotlin transmuxer. No UI dependencies.
-- **xdm-app** — Swing desktop application + browser-integration HTTP server. Main class: `xdm.app.AppMain`.
+### [XDM Homepage](https://xtremedownloadmanager.com/ "XDM Homepage") ###
 
-> `hls-muxer` is a superseded standalone experiment and is **not** part of the reactor build.
+[New Experimental Beta version is out](https://github.com/subhra74/xdm-experimental-binaries/tags)
 
-## Build & Run
+[News about new version](https://github.com/subhra74/xdm/discussions/768)
 
-Plain Maven (system `mvn`, no wrapper). Reactor root is `pom.xml`.
+**X**treme **D**ownload **M**anager (XDM) is a powerful tool to increase download speeds up to 500%, save videos from popular video streaming websites, resume broken/dead downloads, schedule and convert downloads.<br>
+XDM seamlessly integrates with Google Chrome, Mozilla Firefox Quantum, Opera, Vivaldi and other Chroumium and Firefox based browsers, to take over downloads and saving streaming videos from web. XDM has a built in video converter which lets you convert your downloaded videos to different formats so that you can watch them on your mobile or TV (100+ devices are supported)
 
-```bash
-mvn -q clean package              # build all modules → xdm-app/target/xdm-app.jar (fat jar)
-mvn -q -pl xdm-app -am package    # build xdm-app and its dependencies only
-mvn -q test                       # run all tests
-```
+[![name](https://subhra74.github.io/xdm/download.png)](https://xtremedownloadmanager.com/#downloads)
 
-Run:
+## Screenshots
 
-```bash
-java -jar xdm-app/target/xdm-app.jar          # or run AppMain from the IDE
-java -jar xdm-app/target/xdm-app.jar --no-gc  # disable the periodic System.gc() thread
-```
+| ![xdm_1][01] | ![xdm_5][05] | ![xdm_3][03] |
+| --- | --- | --- |
+| ![xdm_7][07] | ![xdm_6][06] | ![xdm_9][09] |
+| ![xdm_4][04] | ![xdm_2][02] |  |
 
-## Packaging a native installer (jpackage)
 
-The app ships as a self-contained native bundle built with `jlink` + `jpackage` (JDK 14+,
-tested on JDK 25). First build the fat jar with `mvn -q clean package`.
+## Features
+- Download files at maximum possible speed (5-6 times faster than conventional downloaders).
+- XDM can save video from numerous video streaming sites.
+- Works with all modern browsers on Windows, Linux and Mac OS X. XDM supports [Google Chrome][18], [Chromium][18], [Firefox Quantum][19], [Vivaldi][20], [Edge][21] and many other popular browsers.
+- XDM has built in video converter, which lets you convert downloaded video to MP3 and MP4 formats.
+- Supports `HTTP`, `HTTPS`, `FTP` as well as video streaming protocols like `MPEG-DASH`, `Apple HLS`, and `Adobe HDS`.
+- XDM also supports authentication, proxy servers, cookies, redirection etc.
+- Video download, clipboard monitoring, automatic antivirus checking, scheduler, system shutdown on download completion.
+- Resumes broken / dead downloads caused by connection problem, power failure or session expiration.
+- Works with Windows ISA, auto proxy scripts, proxy servers, NTLM, Kerberos authentication.
 
-### 1. Determine the required JDK modules
+## Building from source
+<pre>
+This is a standard maven project.
+If you have configured Java and Maven use: <b>mvn clean install</b> to build the project.
+The jar will be created in target directory.
+</pre>
 
-The minimal module set was derived with `jdeps` against the fat jar and verified at runtime:
+## Submitting translations
+If you want to translate XDM to your language, feel free to submit a translation file.<br>
+Steps are mentioned in: https://github.com/subhra74/xdm/wiki/Submitting-translations-for-XDM
 
-```bash
-jdeps --multi-release 25 --ignore-missing-deps \
-      --print-module-deps xdm-app/target/xdm-app.jar
-```
 
-The app needs only these modules (everything else in the JDK is dropped):
+[//]: #ImageLinks
+[01]: https://i.stack.imgur.com/s7ViA.jpg
+[02]: https://i.stack.imgur.com/90TQO.jpg
+[03]: https://i.stack.imgur.com/V5XF3.jpg
+[04]: https://i.stack.imgur.com/aFyH5.png
+[05]: https://i.stack.imgur.com/lmAr6.png
+[06]: https://i.stack.imgur.com/H4yMj.png
+[07]: https://i.stack.imgur.com/8ulBq.png
+[08]: https://i.stack.imgur.com/Gfgae.jpg
+[09]: https://i.stack.imgur.com/GlVDC.png
 
-| Module           | Why it's needed                                              |
-|------------------|-------------------------------------------------------------|
-| `java.base`      | Core runtime, networking, I/O (OkHttp uses raw sockets).    |
-| `java.desktop`   | Swing/AWT UI, FlatLaf, system tray.                         |
-| `java.prefs`     | Java Preferences (FlatLaf / config).                        |
-| `java.xml`       | DASH `.mpd` manifest parsing (`DocumentBuilderFactory`).    |
-| `java.logging`   | Soft dependency of OkHttp/okio.                             |
-| `jdk.crypto.ec`  | Elliptic-curve TLS — required for HTTPS handshakes.\*       |
-| `jdk.charsets`   | Non-Latin charsets for international URLs/filenames.        |
+[//]: #DownloadLinks
+[10]: https://github.com/subhra74/xdm/releases/download/7.2.10/xdmsetup.msi
+[11]: https://github.com/subhra74/xdm/releases/download/7.2.10/xdm-setup-7.2.10.tar.xz
+[12]: #
+[13]: https://github.com/subhra74/xdm/releases/download/7.2.10/xdman.jar
+[14]: https://sourceforge.net/projects/xdman/files/xdmsetup-2018.msi/download
+[15]: https://sourceforge.net/projects/xdman/files/xdm-2018-x64.tar.xz/download
+[16]: https://sourceforge.net/projects/xdman/files/XDMSetup.dmg/download
+[17]: http://xdman.sourceforge.net/xdman.jar
+[100]: https://github.com/subhra74/xdm/releases/download/7.2.11/xdm-setup.msi
+[101]: https://github.com/subhra74/xdm/releases/download/7.2.11/xdm-setup-7.2.11.tar.xz
+[102]: https://github.com/subhra74/xdm/releases/download/7.2.11/xdman.jar
 
-\* `jdk.crypto.ec` is **not** reported by `jdeps` (it's loaded as a security provider via
-service binding), but without it HTTPS downloads fail with handshake errors. Keep it.
-
-### 2. Build a trimmed runtime image with jlink
-
-```bash
-jlink \
-  --add-modules java.base,java.desktop,java.prefs,java.xml,java.logging,jdk.crypto.ec,jdk.charsets \
-  --strip-debug --no-header-files --no-man-pages --compress=zip-6 \
-  --output xdm-app/target/runtime
-```
-
-This produces a ~53 MB self-contained runtime.
-
-### 3. Package with jpackage
-
-`jpackage` is **not** a cross-compiler — you must run both `jlink` (step 2) and `jpackage`
-**on the target OS**. The runtime image and native launchers it produces are
-platform-specific. The portable core of the command below is the same everywhere; only the
-`--type` and the platform-specific shortcut/icon flags differ.
-
-Stage the fat jar in a clean input directory (so jpackage doesn't bundle the rest of
-`target/`) and define the shared GC options once:
-
-```bash
-rm -rf xdm-app/target/jpackage-in && mkdir -p xdm-app/target/jpackage-in
-cp xdm-app/target/xdm-app.jar xdm-app/target/jpackage-in/
-
-# Tuned GC/startup options baked into the app launcher (see Notes below).
-JAVA_OPTS="-XX:+UseZGC -XX:MinMetaspaceFreeRatio=1 -XX:MaxMetaspaceFreeRatio=2 -XX:ZCollectionInterval=30 -XX:ZUncommitDelay=10 -XX:+ClassUnloading -XX:+ClassUnloadingWithConcurrentMark -XX:-AlwaysPreTouch -XX:-ZProactive -XX:-DisableExplicitGC -XX:TieredStopAtLevel=1 -XX:CICompilerCount=1 -Xms4m"
-```
-
-**macOS** (`.dmg`, the default on macOS — works out of the box):
-
-```bash
-jpackage \
-  --name XDM \
-  --app-version 0.0.1 \
-  --vendor "XDM" \
-  --input xdm-app/target/jpackage-in \
-  --main-jar xdm-app.jar \
-  --main-class xdm.app.AppMain \
-  --runtime-image xdm-app/target/runtime \
-  --dest xdm-app/target/dist \
-  --icon packaging/xdm.icns \
-  --java-options "$JAVA_OPTS"
-```
-
-**Windows** (`.exe` via [WiX Toolset](https://wixtoolset.org/) v3.x on `PATH`; use `--type msi` for MSI):
-
-```bash
-jpackage \
-  --type exe \
-  --name XDM \
-  --app-version 0.0.1 \
-  --vendor "XDM" \
-  --input xdm-app/target/jpackage-in \
-  --main-jar xdm-app.jar \
-  --main-class xdm.app.AppMain \
-  --runtime-image xdm-app/target/runtime \
-  --dest xdm-app/target/dist \
-  --icon packaging/xdm.ico \
-  --win-menu --win-shortcut --win-dir-chooser \
-  --java-options "$JAVA_OPTS"
-```
-
-**Linux — Debian/Ubuntu (`.deb`) or Fedora/RHEL (`.rpm`):** swap `--type deb` for
-`--type rpm`. `.deb` needs `fakeroot` + `dpkg`; `.rpm` needs `rpm-build`.
-
-```bash
-jpackage \
-  --type deb \
-  --name xdm \
-  --app-version 0.0.1 \
-  --vendor "XDM" \
-  --input xdm-app/target/jpackage-in \
-  --main-jar xdm-app.jar \
-  --main-class xdm.app.AppMain \
-  --runtime-image xdm-app/target/runtime \
-  --dest xdm-app/target/dist \
-  --icon packaging/xdm.png \
-  --linux-shortcut --linux-menu-group "Network" \
-  --linux-package-name xdm \
-  --java-options "$JAVA_OPTS"
-```
-
-**Linux — Arch Linux:** jpackage has no native Arch (`.pkg.tar.zst`) packager, so build a
-self-contained **app-image** and wrap it in a `PKGBUILD`. First produce the app-image:
-
-```bash
-jpackage \
-  --type app-image \
-  --name xdm \
-  --app-version 0.0.1 \
-  --input xdm-app/target/jpackage-in \
-  --main-jar xdm-app.jar \
-  --main-class xdm.app.AppMain \
-  --runtime-image xdm-app/target/runtime \
-  --dest xdm-app/target/dist \
-  --java-options "$JAVA_OPTS"
-# → xdm-app/target/dist/xdm/  (contains bin/xdm launcher + lib/ + runtime)
-```
-
-Then a minimal `PKGBUILD` that installs it under `/opt` and exposes a launcher + desktop entry:
-
-```bash
-# PKGBUILD
-pkgname=xdm
-pkgver=0.0.1
-pkgrel=1
-pkgdesc="Xtreme Download Manager"
-arch=('x86_64')
-license=('custom')
-options=(!strip)            # don't strip the bundled JVM
-package() {
-  # assumes the jpackage app-image dir 'xdm/' sits next to this PKGBUILD
-  install -dm755 "$pkgdir/opt"
-  cp -r "$srcdir/../xdm" "$pkgdir/opt/xdm"
-  install -dm755 "$pkgdir/usr/bin"
-  ln -s /opt/xdm/bin/xdm "$pkgdir/usr/bin/xdm"
-  install -Dm644 "$srcdir/../packaging/xdm.png" "$pkgdir/usr/share/pixmaps/xdm.png"
-  install -Dm644 /dev/stdin "$pkgdir/usr/share/applications/xdm.desktop" <<'EOF'
-[Desktop Entry]
-Type=Application
-Name=XDM
-Exec=/opt/xdm/bin/xdm
-Icon=xdm
-Categories=Network;
-EOF
-}
-```
-
-Build the package with `makepkg -f` (run from the directory holding the `PKGBUILD` and the
-`xdm/` app-image), then install with `sudo pacman -U xdm-0.0.1-1-x86_64.pkg.tar.zst`. For a
-shareable recipe, publish this as an AUR package that pulls the release jar in `prepare()`
-instead of bundling the prebuilt app-image.
-
-Notes:
-
-- `--app-version` must be numeric (no `-SNAPSHOT`).
-- `--icon` format is per-platform: `.icns` (macOS), `.ico` (Windows), `.png` (Linux). The
-  `packaging/` paths above are placeholders — point them at your actual icon files or drop
-  the flag to use the default icon.
-- The `$JAVA_OPTS` string is the tuned GC/startup configuration baked into the app launcher:
-  ZGC with aggressive metaspace reclamation, concurrent class unloading, minimal JIT
-  tiering, and a tiny initial heap for fast startup and low idle footprint. Explicit GC is
-  kept enabled (`-XX:-DisableExplicitGC`) so the app's periodic `System.gc()` works; pass
-  `--no-gc` at runtime to suppress it.
+[//]: #AddonLinks
+[18]: https://chrome.google.com/webstore/detail/xtreme-download-manager/dkckaoghoiffdbomfbbodbbgmhjblecj
+[19]: https://addons.mozilla.org/en-US/firefox/addon/xdm-browser-monitor/
+[20]: #
+[21]: https://sourceforge.net/p/xdman/blog/2018/01/xdm-integration-with-microsoft-edge/
